2014-07-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Fix handling TLS handshake in the case
	where there is a network failure during the handshake (bug#42781).
	* Source/GSTLS.m: Fix erroneous attempt to load revocation lists.
	* Tests/base/NSURLConnection/test01.m: https test contributed by
	Sergei Golovin.

2014-07-25  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Remove compiler charset options
        * config.mak.in: Remove compiler charset options
        * configure: regenerate:
        Yavor pointed out that the gcc manual is wrong and gcc (all the
        versions we support anyway) always uses utf-8 (as does clang),
        so we can get rid of stuff intended to try to force it to use utf8

2014-07-13  Yavor Doganov  <yavor@gnu.org>

	Add large file support (LFS) for NSData.
	* configure.ac: Call AC_FUNC_FSEEKO/AC_SYS_LARGEFILE.
	* Source/NSData.m (readContentsOfFile): Use fseeko/ftello and
	off_t as appropriate.
	(-initWithContentsOfFile:): Define fileLength of type off_t.
	* Source/GSFileHandle.m:
	* Source/win32/GSFileHandle.m:
	* Source/NSFileManager.m: Remove _FILE_OFFSET_BITS define (now
	defined globally in config.h).

2014-07-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: ([-runMode:beforeDate:]) check performers as
	well as notifications etc ... should fix bug #39107

2014-02-17  Larry Campbell <lcampbel@akamai.com>

	* Source/NSJSONSerialization.m:
	* Tests/base/NSJSONSerialization/tests00.m:
	Fixes for bug #41628

2014-07-12 Yavor Doganov  <yavor@gnu.org>

	* Tests/GNUmakefile:
	* Tests/base/Functions/NSGeometry1.m:
	* Tests/base/NSRunLoop/performers.m:
	Tweaks for running in sandbox (bug #42740)

2014-07-07  Yunqiang Su  <wzssyqa@gmail.com>  (tiny change)

	* config/config.trampoline.c:
	* Source/NSObject.m (GSAtomicIncrement, GSAtomicDecrement):
	Use __mips64 to distinguish MIPS64.

2014-06-30  Yavor Doganov  <yavor@gnu.org>

	* Tools/GNUmakefile (CONFIG_SYSTEM_LIBS):